--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,15 @@
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
+      <!-- {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %} -->
+      {% for post in site.posts %}  
+        <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+        <p><small><strong>{{ post.date | date: "%B %e, %Y" }}</strong> . {{ post.category }} . <a href="{{ site.github.zip_url }}{{ post.url }}#disqus_thread"></a></small></p>      
+      {% endfor %}
     </section>
 
     <section class="main-content">
