--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <title>{{page.title}}</title>
   </head>
   <body>
     <section class="page-header">
@@ -23,7 +24,7 @@
     </section>
 
     <section class="main-content">
-      {{ content }}
+      {{ page.content }}
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
