--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,13 @@
   box-sizing: border-box;
 }
 
+.blog-index {
+	margin-left: 0;
+	margin-top: 0;
+	margin-right: 0;
+	margin-bottom: 0;
+}
+
 .post-title {
   margin-top: 0;
   margin-bottom: 0.1rem;
