--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,7 @@
     <title>{{page.title}}</title>
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-    </section>
+    {% include post_header %}
     {% include post_detail.html %}
     {% if site.google_analytics %}
       <script type="text/javascript">
