--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     {% include post_header %}
-    {% include post_detail.html %}
+    {% include post_content %}
     {% if site.google_analytics %}
       <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
