--- a/_includes/post_content.html
+++ b/_includes/post_content.html
@@ -7,5 +7,5 @@
 	<a href="{{ root_url }}{{ post.url }}">{{ post.title }}</a>
 {% endif %}
 </h1>
-{{ page.content }}
+{{ post.content }}
 </section>
