--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,8 +11,8 @@
     <title>{{page.title}}</title>
   </head>
   <body>
-    {% include post_header %}
-    {% include post_content %}
+    {% include post_header.html %}
+    {% include post_content.html %}
     {% if site.google_analytics %}
       <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
